--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
         "mockery/mockery": "^1.5",
-        "pestphp/pest": "^1.20"
+        "pestphp/pest": "^1.20",
+        "phpstan/phpstan": "^1.10"
     },
     "autoload": {
         "psr-4": {
@@ -38,8 +39,13 @@
         }
     },
     "scripts": {
-        "test": "vendor/bin/pest",
+        "test:unit": "vendor/bin/pest",
         "test-coverage": "vendor/bin/pest --coverage",
+        "test:types": "phpstan analyse --ansi",
+        "test": [
+            "@test:types",
+            "@test:unit"
+        ],
         "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes"
     },
     "config": {
