chore: update .github/workflows/tests.yml

--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
         }
     },
     "scripts": {
-        "test:unit": "vendor/bin/pest tests",
+        "test:unit": "pest tests",
         "test:types": "phpstan analyse --ansi",
         "test": [
             "@test:types",
