fix: fix package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "albertcht/open-ai",
+    "name": "albertcht/notion-ai",
     "description": "Api Client of Notion AI in PHP",
     "keywords": [
         "notion-ai",
